set visible text on mobile mode, update fixtures to allow see long text behaviour. (#2136)
* set visible text on mobile mode, update fixtures to allow see long text behavior.

* Adding hyphen and word-break if there is a long word

* idem for qcm

* eslint

* fix test

--- a/packages/@coorpacademy-components/src/molecule/questions/qcm-graphic/style.css
+++ b/packages/@coorpacademy-components/src/molecule/questions/qcm-graphic/style.css
@@ -64,6 +64,11 @@
   width: 100%;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
+  hyphens: auto;
+  -ms-word-break: break-all;
+  word-break: break-all;
+  word-break: break-word;
 }
 
 .title {
@@ -144,10 +149,17 @@
   }
 
   .titleWrapper {
+    height: 100%;
+    width: 100%;
+    display: flex;
     white-space: wrap;
     overflow: hidden;
     padding: 0;
     justify-content: left;
     font-size: 15px;
+  }
+
+  .title {
+    text-align: left;
   }
 }
